dockerized/frontend/public/css/underwings-org.webflow.css
/* ... */
img {
  max-width: 100%;
  display: inline-block;
}

strong {
  font-weight: bold;
}

.body {
  flex-flow: column;
  display: flex;
}

.container-large {
  z-index: 3;
  padding-right: var(--sizes--padding-medium);
  padding-left: var(--sizes--padding-medium);
  width: 100%;
  max-width: 120rem;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.main {
  z-index: 3;
  padding-top: var(--sizes--main-offset-top);
  flex-flow: column;
  flex: 1;
  display: flex;
  position: relative;
}

.container {
  z-index: 3;
  padding-right: var(--sizes--padding-medium);
  padding-left: var(--sizes--padding-medium);
  width: 100%;
  max-width: 97.75rem;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.container-medium {
  z-index: 3;
  padding-right: var(--sizes--padding-medium);
  padding-left: var(--sizes--padding-medium);
  width: 100%;
  max-width: 99.875rem;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.footer {
  z-index: 2;
  background-color: var(--colors--dark);
  padding-top: 5rem;
  position: relative;
}

.footer:where(.w-variant-2d3c46da-753e-dab6-6d26-4f15379a30dd) {
  background-color: var(--colors--black);
}

.noise-wrapper {
  z-index: 2;
  pointer-events: none;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  max-width: 100vw;
  height: 100%;
  display: flex;
  position: fixed;
  inset: 0%;
  overflow: hidden;
}

.noise-wrapper:where(.w-variant-4c0280f5-2522-b840-9cb4-de0542cf64ab) {
  position: absolute;
}

.noise {
  background-image: url('../images/noise.webp');
  background-position: 0 0;
  background-size: 1024px;
  width: 140vw;
  height: 140vh;
  position: fixed;
  animation: noiseAnimation 0.2s steps(2) infinite;
}

@keyframes noiseAnimation {
  0% {
    transform: translate(0, 0);
  }
  50% {
    transform: translate(20vw, -20vh);
  }
  100% {
    transform: translate(-20vw, 20vh);
  }
}

.noise:where(.w-variant-4c0280f5-2522-b840-9cb4-de0542cf64ab) {
  min-width: 140%;
  min-height: 140%;
  position: absolute;
}

.header {
  z-index: 20;
  position: fixed;
  inset: 0% 0% auto;
}

.navbar {
  background-color: var(--colors--transparent);
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}

.logo {
  justify-content: flex-start;
  align-items: center;
  width: auto;
  height: 1.75rem;
  padding: 0;
  transition: opacity .2s linear;
  display: inline-flex;
}

.logo:hover {
  opacity: .7;
}

.logo-image {
  width: auto;
  height: 140%;
}

.navbar-inner {
  flex-flow: row;
  justify-content: space-between;
  align-items: center;
  display: flex;
}

.nav-menu {
  grid-column-gap: 2.5vw;
  grid-row-gap: 2.5vw;
  background-color: var(--colors--transparent);
  flex-flow: row;
  justify-content: center;
  align-items: center;
  padding: 1.5rem 2rem;
  display: flex;
}

.nav-link {
  color: var(--colors--white);
  white-space: nowrap;
  margin-left: 0;
  margin-right: 0;
  padding: 0;
  transition: all .2s linear;
}

.nav-link.nav-link-gradient {
  color: var(--colors--white);
  margin-right: -4px;
  padding-right: 4px;
}

.button {
  z-index: 1;
  border: 1px dashed var(--colors--dashed-grey);
  background-color: var(--colors--black);
  cursor: pointer;
  border-radius: .375rem;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  display: inline-flex;
  position: relative;
  overflow: hidden;
}

.button-hidden {
  z-index: 2;
  opacity: 0;
  position: absolute;
  inset: 0%;
}

.button-wrapper {
  z-index: 1;
  justify-content: center;
  align-items: center;
  padding: 1.5rem 1.25rem;
  display: flex;
  position: relative;
  overflow: hidden;
}

.button-text {
  color: var(--colors--white);
  white-space: nowrap;
}

.button-accent-gradinet {
  background-image: linear-gradient(235deg, var(--colors--green-light-gradient), var(--colors--green-dark-gradient));
  opacity: 0;
  position: absolute;
  inset: 0%;
}

.nav-menu-box {
  -webkit-backdrop-filter: blur(80px);
  backdrop-filter: blur(80px);
  background-color: #ffffff0a;
  border-radius: .375rem;
}

.menu-button {
  border: 1px dashed var(--colors--dashed-grey);
  cursor: pointer;
  border-radius: 50%;
  width: 3.75rem;
  min-width: 3.75rem;
  height: 3.75rem;
  min-height: 3.75rem;
  padding: 1.25rem;
  transition: border-color .2s linear;
  display: none;
}

.menu-button:hover {
  border-color: var(--colors--white-60);
}

.menu-button.w--open {
  background-color: var(--colors--transparent);
}

.header-cta-button {
  display: none;
}

.section {
  padding-top: var(--sizes--padding-large);
  padding-bottom: var(--sizes--padding-large);
  position: relative;
}

.section.top-padding-small {
  padding-top: 6.25rem;
}

.section.bottom-padding-clear {
  padding-bottom: 0;
}

.section.bottom-padding-small {
  padding-bottom: 6.25rem;
}

.heading-wrapper {
  padding-top: var(--sizes--heading-wrapper-padding-top);
}

.section-wrapper {
  grid-column-gap: var(--sizes--section-wrapper-paddings-vertical);
  grid-row-gap: var(--sizes--section-wrapper-paddings-vertical);
  flex-flow: column;
  justify-content: flex-start;
  align-items: stretch;
  display: flex;
}

.heading {
  color: var(--colors--white);
  letter-spacing: -.07em;
  font-size: 3rem;
  font-weight: 300;
  line-height: 100%;
}

.heading-large {
  letter-spacing: -.06em;
  font-size: 6rem;
  font-weight: 300;
  line-height: 100%;
}

.heading-large.hero-heading-large {
  text-align: center;
  max-width: 15ch;
}

.heading-small {
  letter-spacing: -.04em;
  font-size: 1.75rem;
  font-weight: 300;
  line-height: 100%;
}

.dashed-line-wrapper {
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  flex-flow: row;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  display: flex;
  position: relative;
}

.dashed-line {
  border-top: 1px dashed var(--colors--dashed-grey);
  width: 100%;
  height: 1px;
  display: block;
  position: absolute;
  inset: 50% 0% 0%;
  transform: translate(0, -50%);
}
/* ... */

